[package]
name = "tristate"
version = "0.1.0"
authors = ["Will Toll <will@wtoll.com>"]
edition = "2018"
description = "A simple library that adds an alternative to Option<bool> used to represent a value that can be either true, false, or default"
readme = "README.md"
repository = "https://github.com/Wtoll/Tristate"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }